# video-downloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXECUTION_LOG.md  LICENSE  README.md  app.spec  config.example.toml  pyproject.toml  run.bat  run_windowless.vbs  setup.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
hooks/: runtime_hook.py
resources/: app.manifest
scripts/: comprehensive_test.py  fetch_binaries.py  run_tests.bat
src/video_downloader/: __init__.py  __main__.py  cli.py
src/video_downloader/core/: __init__.py  download_manager.py  downloader.py  playlist_manager.py  runtime_manager.py
src/video_downloader/gui/: __init__.py  diagnostics_pane.py  main_window.py  widgets.py
src/video_downloader/transcription/: __init__.py  whisper_backend.py
src/video_downloader/utils/: __init__.py  config.py  constants.py  exceptions.py  ffmpeg_manager.py  path_utils.py  preflight.py  update_checker.py  user_dirs.py  validators.py
tests/: __init__.py  test_downloader.py  test_validators.py
